--- a/src/vnadata.3
+++ b/src/vnadata.3
@@ -476,4 +476,5 @@ int main(int argc, char **argv)
 .fi
 .\"
 .SH "SEE ALSO"
-.BR vnacal "(3), " vnaconv "(3), " vnafile "(3)"
+.BR vnacal "(3), " vnacal_new "(3), " vnaconv "(3), " vnaerr "(3),"
+.BR vnafile "(3), " vnacal_parameter "(3)"
