--- a/src/vnafile.3
+++ b/src/vnafile.3
@@ -343,4 +343,5 @@ int main(int argc, char **argv)
 .fi
 .\"
 .SH "SEE ALSO"
-.BR vnacal "(3), " vnaconv "(3), " vnadata "(3)"
+.BR vnacal "(3), " vnacal_new "(3), " vnaconv "(3), " vnadata "(3),"
+.BR vnaerr "(3), " vnacal_parameter "(3)"
