Removed inner const in vnacal_new*, vnacal_apply* APIs
In the functions that take pointer to matrix of pointer to value inputs,
e.g. vnacal_new_add_* and vnacal_apply*, both pointers in the formal
argument list were declared const indicating that the function would
neither change the matrix of pointers nor the vectors it pointed to.
But C makes multiple levels of const inconvenient because you cannot
pass a non-const matrix of non-const elements to a function expecting
a pointer to const matrix of const elements -- only the first level
of const is allowed.  As a result, several places in the code, we were
having to add intermediate variables or type casts to pass the correct
argument type, pointing out that it was more of a misfeature than not.
Removed the inner const declarations to better match the common use case.

--- a/src/vnacal.3
+++ b/src/vnacal.3
@@ -110,9 +110,9 @@ vnacal_apply, vnacal_apply_m, vnacal_create, vnacal_add_calibration, vnacal_dele
 .el \{\
 .in +4n
 .\}
-.BI "const double complex *const *" a ", int " a_rows ", int " a_columns ,
+.BI "double complex *const *" a ", int " a_rows ", int " a_columns ,
 .br
-.BI "const double complex *const *" b ", int " b_rows ", int " b_columns ,
+.BI "double complex *const *" b ", int " b_rows ", int " b_columns ,
 .br
 .BI "vnadata_t *" s_parameters );
 .in -4n
@@ -129,7 +129,7 @@ vnacal_apply, vnacal_apply_m, vnacal_create, vnacal_add_calibration, vnacal_dele
 .el \{\
 .in +4n
 .\}
-.BI "const double complex *const *" m ", int " m_rows ", int " m_columns ,
+.BI "double complex *const *" m ", int " m_rows ", int " m_columns ,
 .br
 .BI "vnadata_t *" s_parameters );
 .in -4n
