Changed vnafile_load and vnafile_fload to return vnafile_t *
Made vnafile_load more consistent with vnacal_load by integrating the
vnafile_alloc step in.  This saves the user a step in not having to do
a separate alloc call before the load.

This change breaks source-level compatibility.

--- a/src/vnaerr.3
+++ b/src/vnaerr.3
@@ -52,9 +52,9 @@ vnaerr_error_fn_t \- vector network analyzer library error reporting
 .\"
 .SH DESCRIPTION
 The \fBvnacal_calset_alloc\fP(), \fBvnacal_create\fP(),
-\fBvnacal_load\fP(), and \fBvnafile_alloc\fP functions take an optional
-function pointer, \fIerror_fn\fP, which the library calls to report
-detailed error messages.
+\fBvnacal_load\fP(), and \fBvnafile_alloc\fP(), \fBvnafile_load\fP(),
+and \fBvnafile_fload\fP() functions take an optional function pointer,
+\fIerror_fn\fP, which the library calls to report detailed error messages.
 .PP
 The \fIcategory\fP argument to \fIerror_fn\fP() broadly classifies
 the error.
