Added support for TRL and other autocalibration techniques
Implemented the algorithm described in H. Van Hamme and M. Vanden Bossche,
"Flexible vector network analyzer calibration with accuracy bounds using
an 8-term or a 16-term error correction model," in IEEE Transactions on
Microwave Theory and Techniques, vol. 42, no. 6, pp. 976-987, June 1994,
doi: 10.1109/22.293566 in vnacal_new_solve to provide support iterative
solution of non-linear systems.  This provides support for TRL and other
autocalibration techniques.

--- a/src/TODO
+++ b/src/TODO
@@ -1,36 +1,47 @@
+- Document vnacal_new_set_m_error.  First, do a little more evaluation
+  on whether or not weighting the equations improves accuracy.
+
+- Add functions to set the error threshold and to retrieve errors.
+    int vnacal_new_get_error_vector(vnp, double *)
+    int vnacal_new_set_error_limit(vnp, double limit) - scalar
+
+  Normalize the errors to 1 standard deviation.
+
+- Merge the vnafile_t structure into vnadata_t.
 
 - Add vnacal-T16-example.c using T-MM-SS-SM-MS standards.
   Approach: generally follow the example of vnacal-TSD-example, but
   in the simulated VNA, use the M = (Ts S + Ti) (Tx S + Tm)^-1 matrix
   equation to generate the measured value, taking into account all four
-  T error matrices.  Note that vnacal-test also tests this case and
-  can serve somewhat as an example.
+  T error matrices.  Note that test-vnacal-Silvonen16 also tests this
+  case and can serve somewhat as an example.
+
+- Add Van Hamme example following as closely as possible the example
+  given in the paper.
 
 - Add debian package support
+
+- Add example for TRM / LRM
+    through, unknown equal reflect, match
+
+- Add example for TXYZ / LXYZ
+    through, 3 known reflects
+
+- Add example for LRRM
+    known line, 2 unknown equal reflects, match
+
+- Add example for UXYZ
+    unknown line with S12=S21
+    3 known reflects
+
+- Make tests that invoke each of the examples.  Create expected output
+  files and compare that values are approximately equal.
 
 - Add a test suite for vnadata
 
 - Add a test suite for vnafile
 
 - Add U-parameter (inverse T) support to vnaconv, vnadata and vnafile.
-
-- 
-  Implement auto-calibration based on the calibration algorithm for
-  unknown standards described in "Flexible Vector Network Analyzer
-  Calibration With Accuracy Bounds Using and 8-Term or a 16-Term Error
-  Correction Model", Van hamme & Bossche, 1994.  This will add support
-  for TRL, LRL, TRM, LRM, LRRM, UXYZ, etc. in a very general way.
-
-  The vnacal_make_*_parameter interface is sufficient to build the E
-  matrix and f vector in the algorithm.  The interfaces and structure
-  of vnacal_new_* should be sufficient to calculate the Jacobian and
-  implement the algorithm by extending vnacal_new_solve.
-
-  Add an interface to read-out the solved unknown parameters.  It
-  would be nice if one could provide a map of desired parameters and
-  load them into a vnadata_t object where they can be saved.
-
-  Add a function to compute the error bounds as described in the paper.
 
 - Bring back vnacal_apply_t from the git history (consider renaming to
   vnacal_map_t to better match what it does and avoid confusion with the
