--- a/src/vnacal.3
+++ b/src/vnacal.3
@@ -334,9 +334,9 @@ The dimensions of the calibration must also be square and the same as
 the measurement matrix, with the exception that a 1x2 or 2x1 calibration
 can be used with a 2x2 measurement matrix.
 .\" TODO: update this when fixed
-In order to apply a calibration to a DUT with a different number of
-ports than the calibration, you need the \fBvnacal_map_apply\fP()
-function which is not yet implemented.  See BUGS.
+.\" In order to apply a calibration to a DUT with a different number of
+.\" ports than the calibration, you need the \fBvnacal_map_apply\fP()
+.\" function which is not yet implemented.
 .PP
 For T8, U8, TE10, UE10, T16 and U16 error term types, the \fIa\fP matrix
 has dimensions \fIb_columns\fP x \fIb_columns\fP.
