--- a/src/vnacal_new.3
+++ b/src/vnacal_new.3
@@ -438,9 +438,7 @@ The library was unable to allocate memory.
 .IP \fB\s-2EINVAL\s+2\fP
 A function was called with an invalid parameter.
 .\"
-.SH BUGS
-Unknown calibration parameters are not yet implemented.  If given,
-the library uses the initial guess or correlate as the fixed value.
+.\" .SH BUGS
 .\"
 .SH "SEE ALSO"
 .BR vnacal_new "(3), " vnaconv "(3), " vnadata "(3), " vnaerr "(3),"
