--- a/src/vnacal_parameter.3
+++ b/src/vnacal_parameter.3
@@ -18,7 +18,7 @@
 .TH VNACAL_PARAMETER 3 "FEB 2021" GNU
 .nh
 .SH NAME
-vnacal_make_scalar_parameter, vnacal_make_vector_parameter, vnacal_make_unknown_parameter, vnacal_make_correlated_parameter, vnacal_delete_parameter \- vnacal s-parameter functions
+vnacal_make_scalar_parameter, vnacal_make_vector_parameter, vnacal_make_unknown_parameter, vnacal_make_correlated_parameter, get_parameter_value, vnacal_delete_parameter \- vnacal s-parameter functions
 .\"
 .SH SYNOPSIS
 .B #include <vnacal.h>
@@ -54,14 +54,16 @@ ll.
 .PP
 .BI "int vnacal_make_unknown_parameter(vnacal_t *" vcp ", int " initial_guess );
 .PP
-.BI "int vnacal_make_correlated_parameter(vnacal_t *" vcp ", int "other ,
-.if n \{\
-.in +4n
-.\}
+.BI "int vnacal_make_correlated_parameter(vnacal_t *" vcp ", int " other ,
+.if n .in +4n
 .BI "double " sigma );
-.if n \{\
-.in -4n
-.\}
+.if n .in -4n
+.\"
+.PP
+.BI "double complex vnacal_get_parameter_value(vnacal_t *" vcp ,
+.if n .in +4n
+.BI "int " parameter ", double " frequency );
+.if n .in -4n
 .\"
 .PP
 .BI "int vnacal_delete_parameter(vnacal_t *" vcp ", int " parameter );
@@ -111,14 +113,28 @@ the solution.
 .PP
 \fBvnacal_make_correlated_parameter\fP() creates a parameter with unknown
 value that is correlated with another (possibly unknown) parameter,
-\fIother\fP, connected by a standard deviation of \fIsigma\fP.
+\fIother\fP, which is expected to be equal within a standard deviation
+of \fIsigma\fP.
+.PP
+\fBvnacal_get_parameter_value\fP() returns the value of the parameter
+at a given frequency.
+If given a scalar parameter, \fBvnacal_get_parameter_value\fP() ignores
+\fIfrequency\fP, and simply returns the fixed gamma value; otherwise,
+it computes the value at the given frequency, interpolating as necessary.
+The \fIfrequency\fP parameter must lie within the frequency range of
+the parameter.
+If given an unknown or correlated parameter, it returns the most recent
+value computed by \fBvnacal_new_solve\fP(), or fails if the parameter has
+not been solved.
 .PP
 \fBvnacal_delete_parameter\fP() removes a parameter from the
 \fBvnacal_t\fP structure.
 .\"
 .SH "RETURN VALUE"
 The \fBvnacal_make_\fP*\fB_parameter\fP() functions return an integer
-handle to the newly formed parameter on success, or -1 on error.
+handle to the newly formed parameter on success or -1 on error.
+The \fBvnacal_get_parameter_value\fP() function returns a complex number
+on success or \s-2HUGE_VAL\s+2 on error.
 \fBvnacal_delete_parameter\fP() returns 0 on success or -1 on error.
 .\"
 .SH ERRORS
